# chains

./: .gitignore  README.md  models.py  pyproject.toml  service.py
backend/: constants.py  llama.py
backend/knowledge_base/: chain_messages.txt  texts.txt  wiki_data.csv
backend/persist/: docstore.json  index_store.json
my-app/: package-lock.json  package.json
my-app/src/: App.tsx
my-app/src/api/.openapi-generator/: FILES
my-app/src/api/apis/: DefaultApi.ts
my-app/src/api/models/: HTTPValidationError.ts  QueryResponse.ts  UpdateResponse.ts  ValidationError.ts  ValidationErrorLocInner.ts  index.ts
